@@ -1,3 +1,10 @@
+portage-bashrc-mv-20.0
+----------------------
+Backward-incompatible change:
+/-foo/-bar will not add -bar if -foo cannot be found.
+The previous behaviour can be achieved by /-foo/-bar -bar.
+As a side-effect, this will not unconditionally add -fstack-check for non-GNU.
+
 portage-bashrc-mv-19.0
 ----------------------
 Support F*FLAGS, and let *FLAGS= and *FLAGS+= include F*FLAGS.
